--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,27 @@ background: linear-gradient(90deg, rgba(102,101,100,0.5830707282913166) 34%, rgb
 
 
 
+footer{
+  bottom:0;
+  width: 100%;
+ 
 
+}
+footer li{
+  list-style: none;
+  align-items: center;
+  gap: 50px;
+
+}
+ul li{
+  display: inline-block;
+  margin: 0 40px;
+  list-style: none;
+}
+ul li a{
+  text-decoration: none;
+  color: black;
+}
 
 
 
@@ -116,18 +136,3 @@ background: linear-gradient(90deg, rgba(102,101,100,0.5830707282913166) 34%, rgb
   
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-@media(){
-  
-}
