--- a/styles.css
+++ b/styles.css
@@ -107,12 +107,35 @@ iframe:hover{
 .pricing{
   border: 1px solid black;
   width: 100%;
+}
 
+#price-section{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  justify-content: center;
+}
+
+.price-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: rgb(158, 156, 151);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 
-
-
+.btn{
+margin-top: 60px;
+}
 
 
 
