--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ iframe:hover{
   max-width: 1000px;
   align-items: center;
   margin: 0 auto;
+  margin-top: 100px;
 }
 .pricing{
   border: 1px solid black;
@@ -112,17 +113,20 @@ iframe:hover{
 #price-section{
   display: flex;
   flex-direction: row;
-  gap: 50px;
   justify-content: center;
+ margin: 0;
+ padding: 0;
 }
-
+.price2{
+  margin: 0 0 0 0;
+}
 .price-container{
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
   width: 300px;
-  height: 300px;
+  height: 375px;
   margin: 0 auto;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -130,14 +134,38 @@ iframe:hover{
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-}
+justify-content: center;
 
+}
+h2{
+  margin-top: 30px;
+  margin-bottom: 20px;;
+}
+.level{
+  margin-top: 20px;
+  font-size: 24px;
+}
 
 .btn{
-margin-top: 60px;
+margin-top: 20px;
+height: 29px;
+width: 100px;
+border-radius: 10%;
+background-color: rgba(251, 237, 131, 0.692);
 }
-
-
+.btn:hover{
+  background-color: #141310;
+  cursor: pointer;
+ transform: scale(1.1);
+ color: white;
+}
+.price-container ol li{
+  text-decoration: none;
+  list-style: none;
+  margin: 0 auto;
+  width: 90%;
+padding: 10px;
+}
 
 footer{
   bottom:0;
@@ -147,7 +175,7 @@ footer{
   display: block;
   margin: 0 auto;
   text-align: center;
-  margin-top: 250px;
+  margin-top: 100px;
 
 }
 footer li{
